--- a/config/init/init.yoshino.rc
+++ b/config/init/init.yoshino.rc
@@ -121,9 +121,6 @@ on post-fs
     # Update dm-verity state and set partition.*.verified properties
     verity_update_state
 
-    # SONY: Switch the modem if needed
-    start modem_switcher
-
 on post-fs-data
     # SONY: Camera
     chown cameraserver camera /sys/devices/sony_camera_0/info
@@ -575,3 +572,13 @@ on property:dev.bootcomplete=1 && property:persist.sys.touch.glove_mode=*
 
 on property:dev.bootcomplete=1 && property:persist.sys.touch.cover_mode_enabled=*
     write /sys/devices/virtual/input/clearpad/cover_mode_enabled ${persist.sys.touch.cover_mode_enabled}
+
+
+
+# Cacao service
+service cacaoserver /system/bin/cacaoserver
+    class main
+    user cameraserver
+    group audio camera input drmrpc
+    ioprio rt 4
+    writepid /dev/cpuset/camera-daemon/tasks
